{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 65,
  "lineage": "5eab36db-ed74-73af-9c8a-a5b77f8b8de8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:636768605427:instance/i-07123308a4fbc7135",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07123308a4fbc7135",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c57e0f4d9b2c87e8",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-52-87-180-195.compute-1.amazonaws.com",
            "public_ip": "52.87.180.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013b5a129e7310437",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a56d08042ec36322",
            "tags": {
              "Batch": "5AM",
              "Name": "Terraform"
            },
            "tags_all": {
              "Batch": "5AM",
              "Name": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0aa387d756c358a"
            ]
          },
          "dependencies": [
            "aws_security_group.testsg",
            "aws_subnet.testsubnet",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:internet-gateway/igw-0ead999e0ab522e41",
            "id": "igw-0ead999e0ab522e41",
            "owner_id": "636768605427",
            "tags": {
              "Name": "Test-ig-01"
            },
            "tags_all": {
              "Name": "Test-ig-01"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:network-acl/acl-068fd3d6f7c84d701",
            "egress": [],
            "id": "acl-068fd3d6f7c84d701",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 888,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 777,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 999,
                "to_port": 80
              }
            ],
            "owner_id": "636768605427",
            "subnet_ids": [],
            "tags": {
              "Name": "Test-Nacl-01"
            },
            "tags_all": {
              "Name": "Test-Nacl-01"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rttest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:route-table/rtb-0cc0ccfb164df961e",
            "id": "rtb-0cc0ccfb164df961e",
            "owner_id": "636768605427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ead999e0ab522e41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test-RT"
            },
            "tags_all": {
              "Name": "Test-RT"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a9650f10641e77b",
            "route_table_id": "rtb-0cc0ccfb164df961e",
            "subnet_id": "subnet-0a56d08042ec36322"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rttest",
            "aws_subnet.testsubnet",
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0118cc8342f933cc5",
            "route_table_id": "rtb-0cc0ccfb164df961e",
            "subnet_id": "subnet-0c7e25ea328d675f0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rttest",
            "aws_subnet.testsubnet",
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ae8d4bfd5317d04",
            "route_table_id": "rtb-0cc0ccfb164df961e",
            "subnet_id": "subnet-060fa99285c6a8ad6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rttest",
            "aws_subnet.testsubnet",
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04783f1f19b8e8c60",
            "route_table_id": "rtb-0cc0ccfb164df961e",
            "subnet_id": "subnet-008fca8b32bb6ff90"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rttest",
            "aws_subnet.testsubnet",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:security-group/sg-0e0aa387d756c358a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e0aa387d756c358a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow ssh",
            "name_prefix": "",
            "owner_id": "636768605427",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:subnet/subnet-0a56d08042ec36322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a56d08042ec36322",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768605427",
            "tags": {
              "Name": "Test-sub1"
            },
            "tags_all": {
              "Name": "Test-sub1"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:subnet/subnet-0c7e25ea328d675f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c7e25ea328d675f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768605427",
            "tags": {
              "Name": "Test-sub2"
            },
            "tags_all": {
              "Name": "Test-sub2"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:subnet/subnet-060fa99285c6a8ad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-060fa99285c6a8ad6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768605427",
            "tags": {
              "Name": "Test-sub3"
            },
            "tags_all": {
              "Name": "Test-sub3"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:subnet/subnet-008fca8b32bb6ff90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-008fca8b32bb6ff90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768605427",
            "tags": {
              "Name": "Test-sub4"
            },
            "tags_all": {
              "Name": "Test-sub4"
            },
            "vpc_id": "vpc-04f1968a91d5b336b"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636768605427:vpc/vpc-04f1968a91d5b336b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c64390fc35661c0",
            "default_route_table_id": "rtb-0f9a4cd172a43f70b",
            "default_security_group_id": "sg-0025867beefe20e63",
            "dhcp_options_id": "dopt-b2d2adc8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04f1968a91d5b336b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9a4cd172a43f70b",
            "owner_id": "636768605427",
            "tags": {
              "Env": "Test",
              "Name": "Test-vpc-01",
              "Owner": "Unix Team"
            },
            "tags_all": {
              "Env": "Test",
              "Name": "Test-vpc-01",
              "Owner": "Unix Team"
            }
          }
        }
      ]
    }
  ]
}